src/test/ui/unsized/unsized-bare-typaram.stderr
error[E0277]: the size for values of type `T` cannot be known at compilation time
  --> $DIR/unsized-bare-typaram.rs:2:29
   |
LL | fn bar<T: Sized>() { }
   |        - required by this bound in `bar`
LL | fn foo<T: ?Sized>() { bar::<T>() }
   |        -                    ^ doesn't have a size known at compile-time
   |        |
   |        this type parameter needs to be `std::marker::Sized`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
